fixed agenda extra padding

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -174,8 +174,8 @@ svg {
 
 #main {
     transition: margin-left .5s;
-    padding: 16px;
-    margin-left: 0px !important;
+    /* padding: 16px; */
+    /* margin-left: 0px !important; */
 }
 
 @media screen and (max-height: 450px) {
